Version 2.5.1 (2014-04-??)

   Open all files in binary mode. Output os.linesep instead of '\n'.

   Test --save-headers|body|message masks one after another to allow
   saving a message or a subpart to more than one file.

Version 2.5.0 (2014-03-18)

   Add option --set-header=header:value to set header's value (only at the top
level).

   Add option --set-param=header:param=value to set header parameter's value
(only at the top level). The header must exist.

   Add option -B to skip content-transfer-decoding binary attachments.

   Add options --save-headers, --save-body and --save-message to save decoded
headers/bodies/messages to files.

   Add option -O to set the destination directory for output files.

   Fix a minor bug: if a multipart message (or a subpart) lacks any textual
content - avoid putting an excessive newline.

Version 2.4.0 (2014-03-08)

   Change option -d to accept a comma-separated list of headers:
-d h1,h2,h3,...

   Change option -d to decode all headers and accept a list of exceptions:
-d *,-h1,-h2,...

   Change option -p to accept lists of headers and parameters:
-p h1,h2,h3,..:p1,p2,p3,..

   Allow * and exceptions for -p in the headers and parameters lists:
-p *,-h1,-h2,-h3:p1,p2,p3
-p h1,h2,h3:*,-p1,-p2,-p3
-p *,-h1,-h2,-h3:*,-p1,-p2,-p3

   Change option -r to accept a list of headers: -r h1,h2,h3,...

   Change option -r to remove all headers and accept a list of exceptions:
-r *,-h1,-h2,...

   Change option -R to accept lists of headers and parameters:
-R h1,h2,h3:p1,p2,p3
-R h1,h2,h3:*,-p1,-p2,-p3
-R *,-h1,-h2,-h3:p1,p2,p3
-R *,-h1,-h2,-h3:*,-p1,-p2,-p3

   Publish docs in html format.

   Add ChangeLog.

Version 2.3.8 (2014-02-26)

   Add option --remove-params=header to remove all parameters from the header.

Version 2.3.7 (2014-02-23)

   Add option -r to remove headers and option -R to remove header's parameters.

Version 2.3.6 (2014-02-19)

   Decode "To", "Cc", "Reply-To" and "Mail-Followup-To" headers by default.
