@@ -2,9 +2,6 @@ Add option -I to completely skip (remove) subparts -- no headers, no body,
 no boundary, nothing.
 
 
-Extend options -eIi to multipart subparts.
-
-
 Never touch multipart/encrypted and multipart/signed (but allow -I).
 
 
