@@ -521,6 +521,12 @@ cat input_file | mimedecode.py -o output_file</programlisting>
 </para>
 
 <para>
+  Option -i can also ignore a multipart subpart of a MIME message. In that case
+  the entire subtree of that multipart is removed and replaced with ignore
+  warning.
+</para>
+
+<para>
    Initially all 5 lists are empty, so without any additional parameters
    the program always uses the default decoding (as -t */*).
 </para>
